# R-Type

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  _attack_8hpp_source.html  _backup_transform_8hpp_source.html  _bullet_manager_8hpp_source.html  _clickable_8hpp_source.html  _client_8hpp_source.html  _create_sprite_reference_8hpp_source.html  _destroy_entity_8hpp_source.html  _destroy_entity_out_window_8hpp_source.html  _direction_8hpp_source.html  _draw_sprite_8hpp_source.html  _draw_text_8hpp_source.html  _enemy_manager_8hpp_source.html  _entity_position_8hpp_source.html  _entity_type_8hpp_source.html  _game_start_8hpp_source.html  _health_8hpp_source.html  _hit_by_bullet_8hpp_source.html  _hitbox_8hpp_source.html  _hover_8hpp_source.html  _hover_tint_8hpp_source.html  _input_keys_8hpp_source.html  _kill_no_life_8hpp_source.html  _linear_move_8hpp_source.html  _map_manager_8hpp_source.html  _movement_joystick_8hpp_source.html  _movement_keys_8hpp_source.html  _music_reference_8hpp_source.html  _outline_8hpp_source.html  _outline_text_8hpp_source.html  _package_manager_8hpp_source.html  _packet_manager_8hpp_source.html  _play_music_8hpp_source.html  _play_sound_8hpp_source.html  _player_i_d_8hpp_source.html  _player_inputs_8hpp_source.html  _player_manager_8hpp_source.html  (+213 more)
.github/workflows/: clang.yml
assets/maps/: map.json
client/: Client.hpp  PacketManager.hpp  PlayerID.hpp  SceneManager.hpp  ServerEntityManager.hpp  main.cpp
client/component/: Clickable.hpp  ComponentExample.hpp  Hitbox.hpp  Hover.hpp  HoverTint.hpp  InputKeys.hpp  MovementJoystick.hpp  MovementKeys.hpp  MusicReference.hpp  Outline.hpp  SoundReference.hpp  Spin.hpp  SpriteReference.hpp  TextReference.hpp  Tint.hpp  Transform.hpp
client/system/: DrawSprite.hpp  DrawText.hpp  OutlineText.hpp  PlayMusic.hpp  PlaySound.hpp  SpinSprite.hpp  TintSprite.hpp  TintText.hpp  TransformSprite.hpp  TransformText.hpp  UpdateClick.hpp  UpdateHover.hpp  UpdateHoverTint.hpp  UpdateJoystickMovements.hpp  UpdateKeysInput.hpp  UpdateKeysMovements.hpp
common/: PackageManager.hpp  Payload.hpp  ReceivedPacket.hpp  RuntimeException.hpp  ThreadSafeQueue.hpp  UDPClient.hpp  UDPHandler.hpp
common/component/: ComponentExample.hpp  EntityType.hpp  SpriteReference.hpp  Tint.hpp  Transform.hpp
common/packet/: CreateSpriteReference.hpp  DestroyEntity.hpp  EntityPosition.hpp  GameStart.hpp  PlayerInputs.hpp  PlayerName.hpp  SetEntityLinearMove.hpp  SpawnEntity.hpp  TransformEntity.hpp
common/ressources/: Map.hpp  MapManager.hpp  RuntimeException.hpp
common/system/: LinearMove.hpp
component/common/: ComponentExample.hpp
component/server/: ComponentExample.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+13 more)
server/: BulletManager.hpp  EnemyManager.hpp  MapManager.hpp  PlayerManager.hpp  Server.hpp  Types.hpp  main.cpp
server/component/: Attack.hpp  BackupTransform.hpp  DestroyEntity.hpp  Direction.hpp  Health.hpp  Speed.hpp
server/system/: DestroyEntityOutWindow.hpp  HitByBullet.hpp  KillNoLife.hpp  LinearMove.hpp  Shoot.hpp  UpdateEntityPositions.hpp
system/client/: SystemExample.hpp
system/common/: SystemExample.hpp
system/server/: SystemExample.hpp
